Roles can be assigned when user is created

--- a/configserver/src/main/resources/config/user-service.properties
+++ b/configserver/src/main/resources/config/user-service.properties
@@ -38,6 +38,7 @@ keycloak.admin.password=user
 keycloak.admin.server-url=http://localhost:8443
 keycloak.admin.realm=ecom-app
 keycloak.admin.client-id=admin-cli
+keycloak.admin.client-uuid=3220fa53-994e-48f9-a27b-3ae2f46bc084
 
 management.tracing.sampling.probability=1.0
 
