--- a/configserver/src/main/resources/config/payment-service.yaml
+++ b/configserver/src/main/resources/config/payment-service.yaml
@@ -26,6 +26,9 @@ spring:
         paymentCreated-out-0:
           destination: payment-created
           content-type: application/json
+        paymentFailed-out-0:
+          destination: payment-failed
+          content-type: application/json
       kafka:
         binder:
           broker: localhost:9092
